[package]
name = "zoo-kcl"
version = "0.1.45"
edition = "2021"
repository = "https://github.com/kittycad/kcl.py"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "kcl"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.93"
kcl-lib = { version = "0.2.24", features = ["pyo3", "disable-println"] }
kittycad = "0.3.25"
kittycad-modeling-cmds = "0.2.71"
pyo3 = { version = "0.22.6", features = ["serde", "experimental-async"] }
reqwest = "0.12"
serde = "1.0.214"
serde_json = "1.0.132"
tokio = "1.41.1"
uuid = { version = "1.11.0", features = ["v4"] }
