[package]
name = "zoo-kcl"
version = "0.1.48"
edition = "2021"
repository = "https://github.com/kittycad/kcl.py"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "kcl"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.94"
kcl-lib = { version = "0.2.29", features = [
    "pyo3",
    "engine",
    "disable-println",
] }
#kcl-lib = { path = "../modeling-app/src/wasm-lib/kcl", default-features = false, features = ["pyo3", "engine", "disable-println"] }
kittycad = "0.3.28"
kittycad-modeling-cmds = "0.2.78"
pyo3 = { version = "0.22.6", features = ["serde", "experimental-async"] }
reqwest = "0.12"
serde = "1.0.216"
serde_json = "1.0.132"
tokio = "1.42.0"
uuid = { version = "1.11.0", features = ["v4"] }
