[package]
name = "zoo-kcl"
version = "0.2.3"
edition = "2021"
repository = "https://github.com/kittycad/kcl.py"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "kcl"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.95"
kcl-lib = { version = "0.2.32", features = [
    "pyo3",
    "engine",
    "disable-println",
] }
#kcl-lib = { path = "../modeling-app/src/wasm-lib/kcl", default-features = false, features = ["pyo3", "engine", "disable-println"] }
kittycad = "0.3.28"
kittycad-modeling-cmds = "0.2.94"
pyo3 = { version = "0.22.6", features = ["serde", "experimental-async"] }
reqwest = "0.12"
serde = "1.0.217"
serde_json = "1.0.138"
tokio = "1.43.0"
uuid = { version = "1.12.1", features = ["v4"] }
